@@ -2,6 +2,7 @@
 
 * The PostGIS setup now properly connects as the superuser. (Reported by Adam Trilling)
 * Fix database setup rake tasks under jruby/jdbc adapter. (Pull request by Nick Muerdter)
+* Drop table no longer tries to modify the geometry_columns view under PostGIS 2.0.
 * The Rakefile is now compatible with RubyGems 2.0.
 
 === 0.6.1 / 2013-02-28
